kafka.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka-1
  namespace: confluent
  labels:
    app: kafka-1
    tech: kafka
spec:
  serviceName: kafka-1
  replicas: 1
  selector:
    matchLabels:
      app: kafka-1
  template:
    metadata:
      labels:
        app: kafka-1
        tech: kafka
    spec:
      nodeSelector:
        kubernetes.io/hostname: kube01
      containers:
        - name: kafka-1
          image: 172.24.7.124:5000/confluentinc/cp-kafka:6.0.1
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "rm -f /var/lib/kafka/data/meta.properties"]
          volumeMounts:
            - name: kafka-data
              mountPath: /var/lib/kafka/data
            - name: kafka-log
              mountPath: /var/log/kafka
            - name: kafka-tmp
              mountPath: /tmp
      volumes:
        - name: kafka-tmp
          hostPath:
            path: /home/confluentic/kafka/node1/tmp
  volumeClaimTemplates:
    - metadata:
        name: kafka-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 20Gi
        storageClassName: "local-path"
    - metadata:
        name: kafka-log
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
        storageClassName: "local-path"
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-1
  namespace: confluent
spec:
  selector:
    app: kafka-1
  clusterIP: None
  ports:
    - name: kafka-port
      protocol: TCP
      port: 9092
