keycloak_postgres.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: microservices
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-svc
  namespace: microservices
  labels:
    app: keycloak
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: keycloak
  ports:
  - name: http
    port: 5080
    targetPort: 5080
  - name: https
    port: 5443
    targetPort: 5443
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-nodeport
  namespace: microservices
  labels:
    app: keycloak
spec:
  type: NodePort
  selector:
    app: keycloak
  ports:
  - name: http
    port: 5080
    targetPort: 5080
    nodePort: 30005
  - name: https
    port: 5443
    targetPort: 5443
    nodePort: 31543
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak
  namespace: microservices
  labels:
    app: keycloak
    service: uaa
spec:
  serviceName: keycloak-svc
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
        service: uaa
    spec:
      hostAliases:
      - ip: "172.24.7.125"
        hostnames:
        - "postgresql-keycloak-svc.microservices.svc.cluster.local"
        - "postgresql-keycloak-svc"
      nodeSelector:
        kubernetes.io/hostname: "kube05"
      
      containers:
      - name: keycloak
        image: keycloak/keycloak:19.0.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5080
          name: http
        - containerPort: 5443
          name: https
        command:
        - /opt/keycloak/bin/kc.sh
        args:
        - start
        - --log-level=info
        - --log=console,file
        resources:
          requests:
            cpu: "1200m"
            memory: "3Gi"
          limits:
            cpu: "1200m"
            memory: "3Gi"
        
        volumeMounts:
        - name: themes
          mountPath: /opt/keycloak/themes
        - name: exports
          mountPath: /exports
        - name: certs
          mountPath: /etc/x509/https
        - name: certs
          mountPath: /opt/keycloak/conf/certs/keycloak-svc.crt.pem
          subPath: keycloak-svc.crt.pem
        - name: certs
          mountPath: /opt/keycloak/conf/certs/keycloak-svc.key.pem
          subPath: keycloak-svc.key.pem
        - name: logs
          mountPath: /opt/keycloak/data/log
        - name: conf
          mountPath: /opt/keycloak/conf/keycloak.conf
          subPath: keycloak.conf
        
        livenessProbe:
          tcpSocket:
            port: 5080
          initialDelaySeconds: 120
          periodSeconds: 60
          timeoutSeconds: 20
          failureThreshold: 3
        readinessProbe:
          tcpSocket:
            port: 5080
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 3
  
  volumeClaimTemplates:
  - metadata:
      name: themes
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: manual
      resources:
        requests:
          storage: 2Gi
  - metadata:
      name: exports
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: manual
      resources:
        requests:
          storage: 2Gi
  - metadata:
      name: certs
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: manual
      resources:
        requests:
          storage: 200Mi
  - metadata:
      name: logs
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: manual
      resources:
        requests:
          storage: 2Gi
  - metadata:
      name: conf
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: manual
      resources:
        requests:
          storage: 200Mi
