oracle-soberania-k8s.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: services-databases
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: oracle-soberania
  namespace: services-databases
  labels:
    app: oracle-soberania
    service: databases
spec:
  serviceName: oracle-svc
  replicas: 1
  selector:
    matchLabels:
      app: oracle-soberania
  template:
    metadata:
      labels:
        app: oracle-soberania
        service: databases
    spec:
      securityContext:
        fsGroup: 54321
      
      nodeSelector:
        kubernetes.io/hostname: "kube06"
      
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - "kube06"
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - oracle-soberania
              topologyKey: kubernetes.io/hostname
      
      containers:
      - name: oracle
        image: 172.24.7.124:5000/gvenzl/oracle-free:23
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 1521
          name: oracle
          protocol: TCP
        
        securityContext:
          runAsUser: 54321
          runAsGroup: 54321
        
        resources:
          requests:
            cpu: "1000m"
            memory: "2Gi"
          limits:
            cpu: "1000m"
            memory: "4Gi"
        
        volumeMounts:
        - name: oracle-data
          mountPath: /opt/oracle/oradata
        
        livenessProbe:
          tcpSocket:
            port: 1521
          initialDelaySeconds: 600
          periodSeconds: 120
          timeoutSeconds: 30
          failureThreshold: 5
        readinessProbe:
          tcpSocket:
            port: 1521
          initialDelaySeconds: 300
          periodSeconds: 60
          timeoutSeconds: 20
          failureThreshold: 5
  
  volumeClaimTemplates:
  - metadata:
      name: oracle-data
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: longhorn
      resources:
        requests:
          storage: 50Gi
---
apiVersion: v1
kind: Service
metadata:
  name: oracle-svc
  namespace: services-databases
  labels:
    app: oracle-soberania
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: oracle-soberania
  ports:
  - name: oracle
    port: 1521
    targetPort: 1521
---
apiVersion: v1
kind: Service
metadata:
  name: oracle-loadbalancer
  namespace: services-databases
  labels:
    app: oracle-soberania
spec:
  type: LoadBalancer
  selector:
    app: oracle-soberania
  ports:
  - name: oracle
    port: 1521
    targetPort: 1521
